--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+  pip install coveralls
 
 script: nosetests --with-coverage
 
-after_success: coveralls
+after_success: pip  coveralls
