--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-astroid==1.6.2
-autopep8==1.3.4
+asn1crypto==0.24.0
+cffi==1.11.5
 click==6.7
-colorama==0.3.9
+cryptography==1.9
 Flask==0.12.2
-isort==4.3.4
+Flask-JWT==0.3.2
+Flask-JWT-Extended==3.7.2
+gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
-lazy-object-proxy==1.3.1
 MarkupSafe==1.0
-mccabe==0.6.1
-pycodestyle==2.3.1
-pylint==1.8.3
+pycparser==2.18
+PyJWT==1.4.2
 six==1.11.0
 Werkzeug==0.14.1
-wrapt==1.10.11
