--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,40 @@
-asn1crypto==0.24.0
-cffi==1.11.5
+astroid==1.6.2
+attrs==17.4.0
+auth==0.5.3
+blinker==1.4
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
-cryptography==1.9
+colorama==0.3.9
+coverage==4.5.1
+eventlet==0.23.0
+falcon==1.4.1
 Flask==0.12.2
 Flask-JWT==0.3.2
-Flask-JWT-Extended==3.7.2
-gunicorn==19.7.1
+greenlet==0.4.13
+gunicorn==19.8.1
 idna==2.6
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
-pycparser==2.18
+mccabe==0.6.1
+mongoengine==0.15.0
+more-itertools==4.1.0
+nose==1.3.7
+pipenv==11.9.0
+pluggy==0.6.0
+py==1.5.3
 PyJWT==1.4.2
+pylint==1.8.3
+pymongo==3.6.1
+pytest==3.5.0
+python-mimeparse==1.6.0
+requests==2.18.4
 six==1.11.0
+urllib3==1.22
+virtualenv==15.2.0
+virtualenv-clone==0.3.0
 Werkzeug==0.14.1
+wrapt==1.10.11
