--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ eventlet==0.23.0
 falcon==1.4.1
 Flask==0.12.2
 Flask-JWT==0.3.2
+Flask-JWT-Extended==3.10.0
+Flask-SQLAlchemy==2.3.2
 greenlet==0.4.13
 gunicorn==19.8.1
 idna==2.6
@@ -33,6 +35,7 @@ pytest==3.5.0
 python-mimeparse==1.6.0
 requests==2.18.4
 six==1.11.0
+SQLAlchemy==1.2.8
 urllib3==1.22
 virtualenv==15.2.0
 virtualenv-clone==0.3.0
