--- a/.coveragerc
+++ b/.coveragerc
@@ -1,25 +1,4 @@
-[report]
-omit=
-    */python?.?/*
-    *site-packages/*
-    *site-packages/nose/*
-    *tests/*
-    *asyncio/*
-    *concurrent/*
-    *ctypes/*
-    *multiprocessing/*
-    *mimetypes.py
-    *html/*
-    *decimal.py
-    *http/*
-    *numbers.py
-    *stringprep.py
-    *uuid.py
-    *encodings/*
-    *hmac.py
-    *venv/*
-    
-
-
-[html]
-directory = coverage_html
+[run]
+source =
+    app/
+    tests/
