Run coverage script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ notifications:
   webhooks: https://coveralls.io/webhook?repo_token=B5WcLFBsh1blwvKHipdeekzC1JxR1qhCo
 
 script: 
-  - nosetests --with-coverage --cover-package=run,app,tests
-  - coverage report -m
+  - coverage run -m unittest discover && coverage report
   
-
 after_success: 
   - coveralls
   - codecov
