--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+alembic==0.9.9
 astroid==1.6.2
 attrs==17.4.0
 auth==0.5.3
+autopep8==1.3.5
 blinker==1.4
 certifi==2018.1.18
 chardet==3.0.4
@@ -12,6 +14,8 @@ falcon==1.4.1
 Flask==0.12.2
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.10.0
+Flask-Migrate==2.2.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 greenlet==0.4.13
 gunicorn==19.8.1
@@ -20,6 +24,7 @@ isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
 lazy-object-proxy==1.3.1
+Mako==1.0.7
 MarkupSafe==1.0
 mccabe==0.6.1
 mongoengine==0.15.0
@@ -27,11 +32,16 @@ more-itertools==4.1.0
 nose==1.3.7
 pipenv==11.9.0
 pluggy==0.6.0
+psycopg2==2.7.4
+psycopg2-binary==2.7.5
 py==1.5.3
+pycodestyle==2.4.0
 PyJWT==1.4.2
 pylint==1.8.3
 pymongo==3.6.1
 pytest==3.5.0
+python-dateutil==2.7.3
+python-editor==1.0.3
 python-mimeparse==1.6.0
 requests==2.18.4
 six==1.11.0
