--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+source venv/bin/activate
 export SECRET_KEY='!@7$%G&*()_'
 export DATABASE_URL='postgresql:///books_api'
 export TEST_DATABASE_URL='postgresql:///test_books_api'
