--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-JWT-Extended==3.10.0
 Flask-Migrate==2.2.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Mail
 greenlet==0.4.13
 gunicorn==19.8.1
 idna==2.6
