Make changes to application, implement reset password

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 source venv/bin/activate
 export SECRET_KEY='!$%@7G&*()_'
+export SECURITY_PASSWORD_SALT='DFGH-098765§12'
 export DATABASE_URL='postgresql:///books_api'
 export TEST_DATABASE_URL='postgresql:///test_books_api'
 export FLASK_CONFIG="development"
 export FLASK_APP=run.py
+export MAIL_USER="meyodi18@gmail.com"
+export MAIL_PASS="lo!2aN3SS"
